--- a/20230222/comment.html
+++ b/20230222/comment.html
@@ -12,6 +12,6 @@
 </head>
 <body>
     <div id="root"></div>
-    <script type="text/babel" src="/component.js"></script>
+    <script type="text/babel" src="/comment.js"></script>
 </body>
 </html>
