--- a/20230221/dom2.html
+++ b/20230221/dom2.html
@@ -14,7 +14,7 @@
             const h1 = document.createElement("h1")
             const h2 = document.createElement("h2")
 
-            const txt = "Hi Team"
+            const txt = "Hynn Tistory Blog DOM"
             let time = `It is ${new Date().toLocaleTimeString()}`
 
             h1.innerHTML = txt
