--- a/20230224/React.html
+++ b/20230224/React.html
@@ -8,9 +8,12 @@
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <link rel="stylesheet" href="/20230224/React.css">
 </head>
 <body>
+    <div id="errors"></div>
     <div id="root"></div>
     <script src="/20230224/React.js" type="text/babel"></script>
+    <script src="/20230224/event.js" type="text/javascript"></script>
 </body>
 </html>
