--- a/20230224/test.html
+++ b/20230224/test.html
@@ -4,16 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>React Training</title>
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-    <link rel="stylesheet" href="./React.css">
 </head>
 <body>
-    <div id="errors"></div>
     <div id="root"></div>
-    <script src="./event.js" type="text/javascript"></script>
-    <script src="./React.js" type="text/babel"></script>
+    <script type="text/babel" src="./test.js"></script>
 </body>
 </html>
